<resources>
    <!-- Plain Text -->
    <string name="app_name">Roll</string>
    <string name="app_motto1">READY, SET, WOW!</string>
    <string name="app_motto2">
        &quot;There is one thing the photograph must contain, the humanity of the moment&quot;
    </string>
    <string name="book_note">
        * The rental duration will start when partner has met the customer
    </string>
    <string name="order_messages">
        The system will process and contact your choice of partners, Enjoy
    </string>
    <string name="prompt_inputValue">Some Text</string>

    <!-- Button Text -->
    <string name="about">ABOUT</string>
    <string name="contact">CONTACT</string>
    <string name="profile">PROFILE</string>
    <string name="progress">PROGRESS</string>
    <string name="rated">RATED</string>
    <string name="gallery">GALLERY</string>
    <string name="regist">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="logout">LOGOUT</string>
    <string name="propmt_close">X</string>
    <string name="booking">Book</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="order">Order</string>
    <string name="finish_order">Back to Main Screen</string>

    <!-- Label -->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="title_activity_register">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_login">Username/Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_cpassword">Confirm Password</string>
    <string name="play_date">Play Date</string>
    <string name="start_time">Start Time</string>
    <string name="location">Specific Location</string>
    <string name="notes">Notes for Partners</string>
    <string name="photo">Photo</string>
    <string name="video">Videos</string>
    <string name="digital">Digital</string>
    <string name="Film">Film</string>
    <string name="camera_type">Camera Type</string>
    <string name="rent_duration">Hours of Rent</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="wedding">Wedding</string>
    <string name="photographer_domicilie">Domicilie</string>
    <string name="photographer_service_price">Price</string>
    <string name="photographer_services">Profession</string>
    <string name="photographer_top_porto">Best Capture</string>
    <string name="comment">Comments</string>
    <string name="porto">Portofolio</string>
    <string name="booking_instruct">How to book our partners?</string>
    <string name="booking_instruct1">Search what you need</string>
    <string name="booking_instruct2">Book one ore more</string>
    <string name="booking_instruct3">Ready, Set, Wow!</string>

    <!-- Example -->
    <string name="photographer_name">Nama Photographer</string>
    <string name="photographer_rating_ex">4.5</string>
    <string name="photographer_domicilie_ex">Alamat</string>
    <string name="photographer_price_ex">Rp. 250.000 / Hour</string>
    <string name="photographer_category_1_ex">Prewedding</string>
    <string name="photographer_category_2_ex">Wedding</string>
    <string name="photographer_service_1_ex">Photographer</string>
    <string name="photographer_service_2_ex">Videographer</string>
    <string name="photographer_status_on">Available</string>
    <string name="photographer_status_off">Unavailable</string>
    <string name="review_ex">Hasil Yang memuaskan</string>

</resources>
