<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/labelWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_above="@+id/rowTwo"
            android:gravity="center">

            <TextView
                android:id="@+id/textView_motto1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_motto1"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_motto2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/app_motto2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rowTwo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/card1"
            android:gravity="center">

            <Button
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="-40dp"
                android:paddingHorizontal="25dp"
                android:background="@drawable/rounded_shape_blue"
                android:text="@string/regist"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="onClickRegist"/>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:paddingHorizontal="15dp"
                android:layout_below="@+id/btn_register"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_shape_green"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="onClickLogin" />

        </LinearLayout>

</RelativeLayout>